# mit-adobe-fivek-dataset

./: .gitignore  CMakeLists.txt  README.md  download_fivek.py  fivek_dataset.py  fivek_dataset_builder.py  generate_base_json.py  mit_adobe_fivek.py  mit_adobe_fivek_dataset.py  open_dng.cpp  sample.json  sample_preprocess.py  sample_process.py  sample_processing.py  test_fivek_dataset.py  test_fivek_dataset_builder.py
data/: camera_models.csv  camera_models_list.txt  debug.json  testing.json  training.json  validation.json
dataset/: fivek.py  fivek_builder.py
examples/: sample_multiprocessing.py
scripts/: download_fivek_from_archive.py  generate_base_json.py  generate_dataset_json.py  print_unique_camera_models.py  unique_camera_model.py
tests/: test_common.py  test_fivek.py  test_fivek_builder.py  test_main.py
tools/: CMakeLists.txt  generate_camera_info.cpp
